--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -32,3 +32,144 @@
 /**/
 /**/
 /**/
+/* select an element using its parent */
+            // .main {
+            //     .wrapper & {
+            //         background-color: yellow;
+            //     }
+            // }
+/**/
+/**/
+/**/
+/* use shorthand to declare multiple properties at once */
+            // p {
+            //     font: {
+            //         size: 30px;
+            //         family: open-sans;
+            //         weight: 500;
+            //     }
+            //     text: {
+            //         align: center;
+            //         transform: uppercase;
+            //     }
+            // }
+/**/
+/**/
+/**/
+/* import other stylesheets */
+            // @import "colors.scss";
+/**/
+/**/
+/**/
+/*declare the name of the class as container */
+            // $class-name: container;
+/**/
+/**/
+/**/
+/* use loops (/)
+/* we want 4 .containers 1 through 4 */
+            // @for $i from 1 through 4 {
+            //     /* interpolate the value of $class-name variable, followed by a '-', followed by the value of $i */
+            //     .#{$class-name}-#{$i} {
+            //         /* set the background color to the current value of i, accessing the $colors list with that index to get each item one after the other */
+            //         background-color: nth($colors, $i);
+            //     }
+            // }
+/**/
+/**/
+/**/
+/* use mixins */
+            // @mixin box($size, $background-color) {
+            //     width: $size;
+            //     height: $size / 2;
+            //     background-color: $background-color;
+            // }
+            
+            // .box {
+            //     @include box(200px, #bada55);
+            // }
+/**/
+/**/
+/**/
+/* use placeholders */
+        // %borderStyle {
+        //     border: {
+        //         width: 1px;
+        //         style: solid;
+        //         color: #000;
+        //         radius: 10px
+        //     }
+        // }
+        
+        // .container {
+        //     @extend %borderStyle;
+        //     width: 1280px;
+        //     background-color: #fff;
+        //     margin: 0 auto;
+        // }
+        
+        // .wrapper {
+        //     @extend %borderStyle;
+        //     float: left;
+        //     position: relative;
+        // }
+        
+        // .item {
+        //     @extend %borderStyle;
+        //     font-size: 14px;
+        //     font-family: "Sans Pro", sans-serif;
+        //     font-weight: 700;
+        // }
+/**/
+/**/
+/**/
+/* use of content keyword, useful for media queries */
+        // @mixin mQ($mq-width) {
+        //     @media screen and (min-width: $mq-width) {
+        //         @content
+        //     }
+        // }
+        // /* so now if you wanted to make li elements 25% width above 600px*/
+        // li {
+        //     color: red;
+        //     font-size: 20px;
+        //     @include mQ(600px) {
+        //         width: 25%;
+        //     }
+        // }
+/*content can also be used for nested selectors*/
+        /*SCSS:*/
+        
+        // @mixin context--alternate-template {
+        //   margin: 0;
+        //   font-size: 14px;
+        //   @content
+        // }
+        
+        // .content-sample {
+        //   @include context--alternate-template {
+        //     .important-thing {
+        //       color: red;
+        //     }
+        //     &.is-italic {
+        //       font-family: 'my-webfont-italic';
+        //     }
+        //   }
+        
+        //   // outside mixin call
+        //   background-color: black;
+        // }
+
+        /*CSS output:*/
+
+        // .content-sample {
+        //   margin: 0;
+        //   font-size: 14px;
+        //   background-color: black;
+        // }
+        // .content-sample .important-thing {
+        //   color: red;
+        // }
+        // .content-sample.is-italic {
+        //   font-family: 'my-webfont-italic';
+        // }
