Added media query mixin

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -173,3 +173,17 @@
         // .content-sample.is-italic {
         //   font-family: 'my-webfont-italic';
         // }
+
+/* Media Query Mixin */
+@mixin mq($mq-width) {
+    @media (min-width: $mq-width) {
+        @content
+    }
+}
+
+h1 {
+    font-size: 1.5rem;
+    @include mq(1110px) {
+        font-size: 2.5rem;
+    }
+}
