--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -48,4 +48,8 @@ h1 {
     h1 {
       font-size: 2.5rem; } }
 
+.navbar-brand {
+  /*overwrite default bs styles to center nav text*/
+  margin: 0 auto; }
+
 /*# sourceMappingURL=style.css.map */
