--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -187,3 +187,8 @@ h1 {
         font-size: 2.5rem;
     }
 }
+
+.navbar-brand {
+    /*overwrite default bs styles to center nav text*/
+    margin: 0 auto;
+}
