Created media-queries scss file

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -187,6 +187,9 @@ h1 {
         font-size: 2.5rem;
     }
 }
+h2 {
+    margin: 0 auto;
+}
 
 .navbar-brand {
     /*overwrite default bs styles to center nav text*/
