--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -48,6 +48,9 @@ h1 {
     h1 {
       font-size: 2.5rem; } }
 
+h2 {
+  margin: 0 auto; }
+
 .navbar-brand {
   /*overwrite default bs styles to center nav text*/
   margin: 0 auto; }
