--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -174,6 +174,9 @@
         //   font-family: 'my-webfont-italic';
         // }
 
+/* Imports */
+@import "helpers/mixins.scss";
+
 h1 {
     font-size: 1.5rem;
     @include mq(1110px) {
