Renamed headings.scss to navbar.scss

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -177,7 +177,7 @@
 /* Imports */
 @import "helpers/mixins.scss";
 
-@import "components/headings.scss";
+@import "components/navbar.scss";
 
 .navbar-brand {
     /*overwrite default bs styles to center nav text*/
