--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -53,4 +53,8 @@ h1 {
   /*overwrite default bs styles to center nav text*/
   margin: 0 auto; }
 
+.navbar-brand {
+  /*overwrite default bs styles to center nav text*/
+  margin: 0 auto; }
+
 /*# sourceMappingURL=style.css.map */
