--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -53,4 +53,7 @@ h1 {
   /*overwrite default bs styles to center nav text*/
   margin: 0 auto; }
 
+#total-emissions-over-time {
+  margin: 0 auto; }
+
 /*# sourceMappingURL=style.css.map */
