--- a/assets/stylesheets/components/charts.scss
+++ b/assets/stylesheets/components/charts.scss
@@ -1,3 +1,7 @@
 #total-emissions-over-time {
     margin: 0 auto;
+    .line {
+        /*make stroke thicker than default*/
+        stroke-width: 2.5px;
+    }
 }
