--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -59,7 +59,8 @@ h1 {
     /*make stroke thicker than default*/
     stroke-width: 2.5px; }
 
-#source-selector {
+.dc-select-menu {
+  display: block;
   margin: 0 auto; }
 
 /*# sourceMappingURL=style.css.map */
