--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -176,6 +176,8 @@
 
 /* Imports */
 @import "helpers/mixins.scss";
+@import "helpers/placeholders.scss";
 
 @import "components/navbar.scss";
 @import "components/charts.scss";
+
