Added %force-center to #total-emissions-per-source ruleset

--- a/assets/stylesheets/components/charts.scss
+++ b/assets/stylesheets/components/charts.scss
@@ -8,6 +8,12 @@
     }
 }
 
+#total-emissions-per-source {
+    svg {
+        @extend %force-center;
+    }
+}
+
 .dc-select-menu {
     @extend %force-center;
 }
