--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -178,6 +178,7 @@
 @import "helpers/mixins.scss";
 @import "helpers/placeholders.scss";
 
+@import "components/structure.scss"
 @import "components/navbar.scss";
 @import "components/charts.scss";
 
