Styled source pie chart slice strokes

--- a/assets/stylesheets/components/charts.scss
+++ b/assets/stylesheets/components/charts.scss
@@ -11,6 +11,11 @@
 #total-emissions-per-source-pie {
     svg {
         @extend %force-center;
+        .pie-slice-group {
+            /*add a stroke to the pie slices*/
+            stroke: black;
+            stroke-width: 1px;
+        }
     }
 }
 
