Added %force-center to #composite-chart

--- a/assets/stylesheets/components/charts.scss
+++ b/assets/stylesheets/components/charts.scss
@@ -19,6 +19,11 @@
     }
 }
 
+#composite-chart {
+    svg {
+        @extend %force-center
+    }
+}
 .dc-select-menu {
     @extend %force-center;
 }
