Implemented SCSS solution to custom x axis rendering source bar chart

--- a/assets/stylesheets/components/charts.scss
+++ b/assets/stylesheets/components/charts.scss
@@ -29,6 +29,15 @@
     svg {
         @extend %force-center;
     }
+    
+    .axis.x {
+        .tick:nth-child(even) {
+            text {
+                color: red;
+                transform: translate(-10px,20px);
+            }
+        }
+    }
 }
 
 .dc-select-menu {
