--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -68,4 +68,8 @@ h1 {
   stroke: black;
   stroke-width: 1px; }
 
+#total-emissions-per-source .axis.x .tick:nth-child(even) text {
+  color: red;
+  transform: translate(-10px, 20px); }
+
 /*# sourceMappingURL=style.css.map */
