Imported media-queries.scss into style.scss

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -175,6 +175,7 @@
         // }
 
 /* Imports */
+@import "helpers/media-queries.scss"
 @import "helpers/mixins.scss";
 @import "helpers/placeholders.scss";
 
