Commented out media-queries.scss for now

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -175,7 +175,7 @@
         // }
 
 /* Imports */
-@import "helpers/media-queries.scss"
+// @import "helpers/media-queries.scss";
 @import "helpers/mixins.scss";
 @import "helpers/placeholders.scss";
 
