Created text.scss and imported into main.scss

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -182,4 +182,5 @@
 @import "components/structure.scss";
 @import "components/navbar.scss";
 @import "components/charts.scss";
+@import "components/text.scss"
 
