--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -44,7 +44,7 @@
 /* Imports */
 /*Media Queries */
 @import url("https://fonts.googleapis.com/css?family=Ubuntu");
-.navbar-brand, #total-emissions-over-time svg, #composite-chart svg, #total-emissions-per-source-pie svg, #total-emissions-per-source svg, .dc-select-menu {
+.navbar-brand, #total-emissions-over-time svg, #composite-chart svg, #total-emissions-per-source-pie svg, #total-emissions-per-source svg, .dc-select-menu, h2 {
   margin: 0 auto;
   display: block; }
 
