Imported variables.scss into style.scss and set navbar background-color to

--- a/assets/stylesheets/components/navbar.scss
+++ b/assets/stylesheets/components/navbar.scss
@@ -5,6 +5,10 @@ h1 {
     }
 }
 
+.navbar {
+    background-color: $green;
+}
+
 .navbar-brand {
     /*overwrite default bs styles to center nav text*/
     // margin: 0 auto;
