--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -176,6 +176,7 @@
 
 /* Imports */
 // @import "helpers/media-queries.scss";
+@import "helpers/variables.scss"
 @import "helpers/mixins.scss";
 @import "helpers/placeholders.scss";
 
