--- a/assets/stylesheets/components/text.scss
+++ b/assets/stylesheets/components/text.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu+Mono');
 
 body {
    font-family: 'Ubuntu', sans-serif; 
@@ -6,8 +7,15 @@ body {
 
 h2 {
     @extend %force-center;
+    font-family: 'Ubunto Mono', monospace;
 }
 
 .intro-text {
     margin-top: 10px;
+}
+
+.reveal-two {
+    div {
+        font-size: 2rem;
+    }
 }
