--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -54,6 +54,9 @@ main {
   min-width: 758px;
   max-width: 1990px; }
 
+section {
+  margin-top: 30px; }
+
 h1 {
   font-size: 1.5rem; }
   @media (min-width: 1110px) {
@@ -80,9 +83,6 @@ body {
 
 h2 {
   font-family: 'Ubunto Mono', monospace; }
-
-.intro-text {
-  margin-top: 10px; }
 
 .reveal-two div {
   font-size: 2rem; }
