--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -183,3 +183,4 @@
 @import "components/navbar.scss";
 @import "components/charts.scss";
 @import "components/text.scss";
+@import "components/images.scss";
