--- a/assets/stylesheets/components/text.scss
+++ b/assets/stylesheets/components/text.scss
@@ -7,7 +7,10 @@ body {
 
 h2 {
     @extend %force-center;
-    font-family: 'Ubunto Mono', monospace;
+    font: {
+        family: 'Ubunto Mono', monospace;
+        size: 3rem;
+    }
 }
 
 .reveal-two {
