--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -82,7 +82,8 @@ body {
   font-family: 'Ubuntu', sans-serif; }
 
 h2 {
-  font-family: 'Ubunto Mono', monospace; }
+  font-family: 'Ubunto Mono', monospace;
+  font-size: 3rem; }
 
 .reveal-two div {
   font-size: 2rem; }
