--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -64,7 +64,8 @@ h1 {
       font-size: 2.5rem; } }
 
 .navbar {
-  background-color: #0b9c00; }
+  background-color: #0b9c00;
+  border: 2px solid black; }
 
 .navbar-brand {
   /*overwrite default bs styles to center nav text*/ }
