--- a/assets/stylesheets/components/footer.scss
+++ b/assets/stylesheets/components/footer.scss
@@ -2,12 +2,12 @@ footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    font-family: 'Spirax', cursive;
+    // font-family: 'Spirax', cursive;
     /*stops footer wandering off to the right on very large screens*/
     max-width: 1904px;
     border-top: 2px solid black;
 }
-footer li {
-    margin: 10px 1% 0 1%;
-    font-size: 0.95em;
-}
+// footer li {
+//     margin: 10px 1% 0 1%;
+//     font-size: 0.95em;
+// }
