Added copyright information

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -46,7 +46,7 @@
 /*Media Queries */
 @import url("https://fonts.googleapis.com/css?family=Ubuntu");
 @import url("https://fonts.googleapis.com/css?family=Ubuntu+Mono");
-.force-center, .navbar-brand, .dc-select-menu, h2, img {
+.force-center, .navbar-brand, .dc-select-menu, h2, img, footer p {
   margin: 10px auto;
   display: block; }
 
@@ -101,5 +101,13 @@ img {
   @media (min-width: 1266px) {
     img {
       width: initial; } }
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /*stops footer wandering off to the right on very large screens*/
+  max-width: 1904px;
+  border-top: 2px solid black; }
 
 /*# sourceMappingURL=style.css.map */
