--- a/assets/stylesheets/components/footer.scss
+++ b/assets/stylesheets/components/footer.scss
@@ -6,6 +6,9 @@ footer {
     /*stops footer wandering off to the right on very large screens*/
     max-width: 1904px;
     border-top: 2px solid black;
+    p {
+        @extend %force-center;
+    }
 }
 // footer li {
 //     margin: 10px 1% 0 1%;
