--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -103,11 +103,7 @@ img {
       width: initial; } }
 
 footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
-  /*stops footer wandering off to the right on very large screens*/
-  max-width: 1904px;
-  border-top: 2px solid black; }
+  /*stops footer wandering off to the right on very large screens*/ }
 
 /*# sourceMappingURL=style.css.map */
