Changed navbar border styling to border-bottom

--- a/assets/stylesheets/components/navbar.scss
+++ b/assets/stylesheets/components/navbar.scss
@@ -7,7 +7,7 @@ h1 {
 
 .navbar {
     background-color: $green;
-    border: 2px solid black;
+    border-bottom: 2px solid black;
 }
 
 .navbar-brand {
