--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -89,6 +89,8 @@ h2 {
 .reveal-two div {
   font-size: 2rem; }
 
+footer a {
+  margin: 0 20px; }
 footer p {
   font-size: 0.75rem;
   margin-top: -10px; }
