--- a/assets/stylesheets/components/structure.scss
+++ b/assets/stylesheets/components/structure.scss
@@ -1,3 +1,9 @@
+// html {
+//     /*Required to ensure footer stays at the bottom of viewport*/
+//     position: relative;
+//     min-height: 100%;
+// }
+
 body {
     min-width: 758px;
     max-width: 1990px;
