--- a/assets/stylesheets/components/text.scss
+++ b/assets/stylesheets/components/text.scss
@@ -20,8 +20,12 @@ h2 {
 }
 
 footer {
+    background-color: $green;
+    width: 100%;
+    position: absolute;
     a {
         margin: 0 20px;
+        color: white;
     }
     p {
         font-size: 0.75rem;
