Adjusted color of footer items

--- a/assets/stylesheets/components/text.scss
+++ b/assets/stylesheets/components/text.scss
@@ -23,6 +23,7 @@ footer {
     background-color: $green;
     width: 100%;
     position: absolute;
+    color: white;
     a {
         margin: 0 20px;
         color: white;
