--- a/assets/stylesheets/components/text.scss
+++ b/assets/stylesheets/components/text.scss
@@ -28,6 +28,9 @@ footer {
         margin: 0 20px;
         color: white;
     }
+    a:hover {
+        color: white;
+    }
     p {
         font-size: 0.75rem;
         margin-top: -10px;
