--- a/assets/stylesheets/components/text.scss
+++ b/assets/stylesheets/components/text.scss
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Ubuntu');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 @import url('https://fonts.googleapis.com/css?family=Ubuntu+Mono');
 
 body {
-   font-family: 'Ubuntu', sans-serif; 
+   font-family: 'Roboto', sans-serif;
 }
 
 h2 {
