--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -80,6 +80,10 @@ h1 {
   stroke: black;
   stroke-width: 1px; }
 
+select {
+  padding: 10px;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.5); }
+
 body {
   font-family: 'Roboto', sans-serif; }
 
