--- a/assets/stylesheets/components/navbar.scss
+++ b/assets/stylesheets/components/navbar.scss
@@ -8,7 +8,8 @@ h1 {
 }
 
 .navbar {
-    background-color: $green;
+    // background-color: $green;
+    background-image: url("../images/color5.png");
     border-bottom: 2px solid black;
     flex-direction: column; /*Bootstrap navbars are display: flex by default, so this declaration ensures the subtitles are stack properly*/
     h2 {
