Added margin-top reset to body to override %force-center

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -53,7 +53,8 @@ body, .force-center, h1, .dc-select-menu, h2, img {
 
 body {
   min-width: 758px;
-  max-width: 1990px; }
+  max-width: 1990px;
+  margin-top: 0; }
 
 section {
   margin-top: 20px; }
