Added max-width to footer

--- a/assets/stylesheets/components/text.scss
+++ b/assets/stylesheets/components/text.scss
@@ -20,9 +20,10 @@ h2 {
 }
 
 footer {
-    min-width: $min-width; /* Prevent the footer being squashed down on smaller viewports */
+    min-width: $min-width; //Prevent the footer being squashed down on smaller viewports
     // background-color: $green;
     width: 100%;
+    max-width: 1990px; //Needs to match body to ensure alignment, especially on larger viewports
     position: absolute;
     // color: white;
     a {
