Created font-awesome.scss and linked to style.scss

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -184,3 +184,4 @@
 @import "components/charts.scss";
 @import "components/text.scss";
 @import "components/images.scss";
+@import "components/font-awesome.scss";
