Added class to font-awesome div and declared font-size and margin

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -126,7 +126,8 @@ img {
     img {
       width: initial; } }
 
-i {
-  font-size: 50px; }
+.fa-div {
+  font-size: 50px;
+  margin: 0 auto; }
 
 /*# sourceMappingURL=style.css.map */
