--- a/assets/stylesheets/components/charts.scss
+++ b/assets/stylesheets/components/charts.scss
@@ -6,6 +6,7 @@
 }
 
 #total-emissions-per-source-pie {
+    width: 100%;
     svg {
         .pie-slice-group {
             /*add a stroke to the pie slices*/
@@ -19,4 +20,44 @@ select {
     @extend %force-center;
     padding: 10px;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.5)
+}
+
+/* Popup container */
+.popup {
+    @extend %force-center;
+    // position: absolute;
+    cursor: pointer;
+    /* The actual popup (appears on top) */
+    .popuptext {
+        // visibility: hidden;
+        font-size: 0.8rem;
+        width: 160px;
+        background-color: #555;
+        color: #fff;
+        text-align: center;
+        border-radius: 6px;
+        padding: 8px 0;
+        position: absolute;
+        z-index: 1;
+        bottom: 89%;
+        left: 50%;
+        margin-left: -80px;
+    }
+    /* Popup arrow */
+    .popuptext::after {
+        content: "";
+        position: absolute;
+        top: 100%;
+        left: 50%;
+        margin-left: -5px;
+        border-width: 5px;
+        border-style: solid;
+        border-color: #555 transparent transparent transparent;
+    }
+    /* Toggle this class when clicking on the popup container (hide the popup) */
+    .hide {
+        visibility: hidden;
+        opacity: 0;
+        transition: visibility 0s 0.3s, opacity 0.3s linear;
+    }
 }
