--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -107,7 +107,7 @@ select {
     color: #fff;
     text-align: center;
     border-radius: 6px;
-    padding: 8px 0;
+    padding: 14px 0 8px;
     position: absolute;
     z-index: 1;
     bottom: 89%;
@@ -126,6 +126,12 @@ select {
     visibility: hidden;
     opacity: 0;
     transition: visibility 0s 0.3s, opacity 0.3s linear; }
+
+.fa-window-close {
+  position: absolute;
+  left: 148px;
+  bottom: 41px;
+  font-size: 1rem; }
 
 body {
   font-family: 'Roboto', sans-serif; }
